Update final spacing

--- a/app/containers/AdminPanel/APIManagement/style.scss
+++ b/app/containers/AdminPanel/APIManagement/style.scss
@@ -20,6 +20,9 @@
     .api-icon{
         font-size: 36px;
     }
+    .edit-profile{
+        margin-bottom: 0;
+    }
 }
 .Modal.api-management-learn-more{
     height: 448px;
