https://surgicalsafety.atlassian.net/browse/IPE-335 add client ID

--- a/app/containers/AdminPanel/APIManagement/style.scss
+++ b/app/containers/AdminPanel/APIManagement/style.scss
@@ -37,7 +37,10 @@
 .secret-reset,
 .client-success{
     width: 620px;
-    height: 324px;
+    height: 420px;
+    .copy-field{
+        margin-bottom: 24px;
+    }
     .divider{
         margin-bottom: 32px;
     }
