--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -74,7 +74,7 @@ label {
 .red { color: $red; }
 
 .link{
-  color: #028cc8;
+  color: #028cc8 !important;
   font-size: 14px;
   letter-spacing: 0;
   line-height: 19px;
