--- a/app/containers/SSTAdmin/SSTUsers/style.scss
+++ b/app/containers/SSTAdmin/SSTUsers/style.scss
@@ -1,4 +1,5 @@
 @import "styles/global-styles";
+.sst-api-management,
 .sst-user-management {
     padding: 25px 40px;
     .table-container {
@@ -20,7 +21,7 @@
         }
 
         .add-user-button {
-            margin: 0 86px;
+            margin: 2px 86px;
         }
         tbody .MuiTableCell-root {
             position: relative;
@@ -32,13 +33,6 @@
             position: absolute;
             top: 0;
             left: 0;
-        }
-        .role-list {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2; /* number of lines to show */
-            -webkit-box-orient: vertical;
         }
     }
     .learn-more {
@@ -163,6 +157,9 @@
     padding: 32px;
     min-width: unset;
     border-radius: 8px;
+    max-height: calc(100vh - 40px);
+    overflow-y: auto;
+    overflow-x: hidden;
     .close-button {
         cursor: pointer;
         position: absolute;
@@ -175,6 +172,7 @@
         margin-left: -32px;
     }
 }
+.Modal.api-management-learn-more,
 .Modal.user-management-learn-more {
     padding: 0;
     width: 620px;
@@ -215,7 +213,8 @@
         padding: 0 8px;
     }
 }
-
+.secret-reset,
+.client-success,
 .user-delete {
     width: 620px;
     height: 360px;
@@ -225,8 +224,8 @@
         margin-bottom: 12px;
     }
     .close {
-        bottom: 20px;
-        right: 20px;
+        bottom: 32px;
+        right: 40px;
         position: absolute;
         width: 100%;
         button {
@@ -238,23 +237,13 @@
         margin-bottom: 40px;
     }
 }
-
-.add-edit-user.sstadmin {
-    max-height: calc(100vh - 80px);
-    overflow-y: auto;
-    overflow-x: hidden;
-    .permissions-section {
-        .product-permission {
-            margin: 16px 0;
-        }
-
-        .add-permissions-buttons {
-            margin-top: 20px;
-        }
-    }
+.client-success {
+    width: 480px;
+    height: 305px;
 }
+
 .add-edit-user {
-    width: 680px;
+    width: 620px;
 
     // Profile section
     .edit-profile {
@@ -276,6 +265,7 @@
         display: flex;
         .profile-info {
             margin: 0 32px;
+            margin-right: 0px;
             :first-child {
                 color: #004f6e;
             }
@@ -360,4 +350,3 @@
         }
     }
 }
-
