--- a/app/containers/SSTAdmin/style.scss
+++ b/app/containers/SSTAdmin/style.scss
@@ -6,4 +6,19 @@
     .header{
         padding: 46px 40px 6px;
     }
+
+}
+
+.add-edit-user.sstadmin {
+    max-height: calc(100vh - 80px);
+    overflow-y: auto;
+    overflow-x: hidden;
+    .permissions-section {
+        .product-permission {
+            margin: 16px 0;
+        }
+        .add-permissions-buttons {
+            margin-top: 20px;
+        }
+    }
 }
