--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -134,6 +134,7 @@ label {
 .padding20 { padding: 20px; }
 .padding0 { padding: 0px; }
 .margin0 { margin: 0px !important; }
+.breakword { word-break: break-word;}
 
 .full-height { height: 100%; }
 .ellipses-3 {
