--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -172,12 +172,12 @@
     }
     .message {
         display: inline-block;
-        > div {
-            display: inline-flex;
-            div {
-                display: block;
-            }
-        }
+        // > div {
+        //     display: inline-flex;
+        //     div {
+        //         display: block;
+        //     }
+        // }
     }
 }
 .Modal.api-management-learn-more,
@@ -221,11 +221,14 @@
         padding: 0 8px;
     }
 }
-.secret-reset,
-.client-success,
-.user-delete {
+
+.Modal.secret-reset,
+.Modal.client-success,
+.Modal.user-delete {
     width: 620px;
-    height: 360px;
+    height: unset;
+    min-height: 360px;
+    padding-bottom: 100px;
 
     .header {
         color: #004f6e;
@@ -244,6 +247,11 @@
         width: 620px;
         margin-bottom: 40px;
     }
+}
+.Modal.user-delete{
+    height: unset;
+    min-height: 360px;
+    padding-bottom: 120px;
 }
 .client-success {
     width: 480px;
