--- a/app/containers/Welcome/style.scss
+++ b/app/containers/Welcome/style.scss
@@ -15,10 +15,17 @@
       text-align: left;
       position: absolute;
       bottom: 0;
-      background-image: url("img/Surgeons_Image_Placeholder.png");
       background-size: contain;
       background-repeat: no-repeat;
       background-position: left;
+      display: flex;
+      align-items: end;
+      img{
+        max-width: 100%;
+        height: auto;
+        object-fit: contain;
+        max-height: 100%;
+      }
     }
     @keyframes fadeIn {
         from {
