--- a/app/containers/Welcome/style.scss
+++ b/app/containers/Welcome/style.scss
@@ -10,10 +10,9 @@
         animation: fadeIn .75s ease-in both;
     }
     .facility-graphic-container {
-      position: relative;
+      position: absolute;
       width: 100%;
       height: 100%;
-      display: flex;
       align-items: end;
       > div {
         height: 80%;
@@ -24,6 +23,9 @@
         height: auto;
         object-fit: cover;
       }
+    }
+    .facility-graphic-container.animate {
+      position: relative;
     }
     img {
         max-width: 360px;
