--- a/app/components/SharedComponents/style.scss
+++ b/app/components/SharedComponents/style.scss
@@ -21,8 +21,11 @@
   }
 
   img {
-    width: 100px;
     border-radius: 50%;
+    background-size: cover;
+    border-radius:50% 50% 50% 50%;
+    width:100px;
+    height:100px;
   }
 }
 
@@ -32,8 +35,11 @@
   background: rgba(196, 196, 196, 0.1);
 
   img {
-    width: 50px;
     border-radius: 50%;
+    background-size: cover;
+    border-radius:50% 50% 50% 50%;
+    width:50px;
+    height:50px;
   }
 
   .other-facilities__list-item {
