--- a/app/containers/Welcome/style.scss
+++ b/app/containers/Welcome/style.scss
@@ -6,18 +6,21 @@
     flex-direction: column;
     justify-content: center;
     height: 100%;
+    .container {
+      height: 100%;
+    }
     .welcome-grid{
         animation: fadeIn .75s ease-in both;
+    }
+    .facility-graphic-container__img-container {
+      height: 80%;
+      overflow: hidden;
     }
     .facility-graphic-container {
       position: absolute;
       width: 100%;
       height: 100%;
       align-items: end;
-      > div {
-        height: 80%;
-        overflow: hidden;
-      }
       img{
         max-width: 100%;
         height: auto;
