--- a/app/components/SharedComponents/style.scss
+++ b/app/components/SharedComponents/style.scss
@@ -37,6 +37,10 @@
 .other-facilities {
   display: flex;
   flex-direction: column;
+  height: 330px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin: 0 -30px;
 
   img {
     border-radius: 50%;
