update dashboard graphic image shrinking based on screen ratio

--- a/app/containers/Welcome/style.scss
+++ b/app/containers/Welcome/style.scss
@@ -17,7 +17,12 @@
       overflow: hidden;
       width: 100%;
     }
-    @media only screen and (min-width: 1397px) {
+    @media only screen and (max-aspect-ratio: 1920 / 1161) {
+      img{
+        height: 100%;
+      }
+    }
+    @media only screen and (min-aspect-ratio: 1920 / 1161) {
       img{
         width: 100%;
         height: auto;
