--- a/app/containers/Welcome/style.scss
+++ b/app/containers/Welcome/style.scss
@@ -20,6 +20,7 @@
     @media only screen and (max-aspect-ratio: 1920 / 1161) {
       img{
         height: 100%;
+        min-width: 100%;
       }
     }
     @media only screen and (min-aspect-ratio: 1920 / 1161) {
@@ -33,7 +34,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      align-items: end;
+      flex-direction: column-reverse;
     }
     .facility-graphic-container.animate {
       position: relative;
