Revert "enhance the dashboard graphic positioning by considering the width of the sidebar"
This reverts commit d12ad92f81d0061ee6ff20f8e1089c0e2be4b86e.

--- a/app/containers/Welcome/style.scss
+++ b/app/containers/Welcome/style.scss
@@ -17,18 +17,13 @@
       overflow: hidden;
       width: 100%;
     }
-    @media only screen and (max-aspect-ratio: 1681 / 1161) {
+    @media only screen and (max-aspect-ratio: 1920 / 1161) {
       img{
         height: 100%;
+        min-width: 100%;
       }
     }
-    @media only screen and (min-aspect-ratio: 1681 / 1161 ) and (max-aspect-ratio: 2159 / 1161 ) {
-      img{
-        height: 100%;
-        width: 100%;
-      }
-    }
-    @media only screen and (min-aspect-ratio: 2159 / 1161) {
+    @media only screen and (min-aspect-ratio: 1920 / 1161) {
       img{
         width: 100%;
         height: auto;
