--- a/app/components/Efficiency/styles.scss
+++ b/app/components/Efficiency/styles.scss
@@ -1,7 +1,7 @@
 .modal {
     top: 50%;
     left: 50%;
-    min-width: 691px;;
+    min-width: 691px;
     transform: translate(-50%, -50%);
     padding: 40px;
     outline: none;
@@ -14,9 +14,18 @@
 .page-container {
     background-color: #f2f2f2;
     height: 100%;
-    overflow-y: scroll;
-    font-family: 'Noto Sans';
-    h4 {
+    overflow-y: auto;
+    overflow-x: hidden;
+    font-family: "Noto Sans";
+
+    .tile-card {
+        background: #ffffff;
+        /* card shadow */
+        box-shadow: 4px 12px 32px rgba(109, 141, 173, 0.12) !important ;
+        border-radius: 8px !important ;
+    }
+
+    .tile-title {
         margin-top: 0px;
         color: #333;
         font-weight: normal;
@@ -29,25 +38,22 @@
         align-content: center;
         align-items: center;
         height: auto;
-        background-color: #E0E0E0;
+        background-color: #e0e0e0;
         padding: 0 40px;
     }
-
 
     .efficiency-container {
         padding: 0px 40px;
         .efficiency-dashboard-header {
+            margin: 0px;
             margin-top: 36px;
-            h3 {
-                margin: 0px;
-            }
         }
     }
     .display-number {
         display: inline-flex;
         align-items: flex-start;
         text-align: left;
-        color: #004F6E;
+        color: #004f6e;
         font-family: "Noto Sans";
         font-size: 74px;
         font-weight: bold;
@@ -57,12 +63,12 @@
     }
     .superscript-text {
         margin-top: 8px;
-        font-family: 'Noto Sans';
+        font-family: "Noto Sans";
         font-style: normal;
         font-weight: normal;
         font-size: 26px;
         line-height: 35px;
-        color: #004F6E;
+        color: #004f6e;
     }
     .additional-scores {
         display: flex;
@@ -70,7 +76,7 @@
         flex-flow: row wrap;
         padding: 14px;
         &:nth-child(2n) {
-            background-color: #EEFAFF;
+            background-color: #eefaff;
         }
         .additional-scores-title {
             color: #4f4f4f;
@@ -78,9 +84,9 @@
             line-height: 22px;
         }
         .additional-scores-value {
-           color: #004f6e;
-           font-size: 26px;
-           line-height: 35px;
+            color: #004f6e;
+            font-size: 26px;
+            line-height: 35px;
         }
     }
     .overtime-rows {
@@ -90,7 +96,7 @@
         align-items: center;
         .overtime-block-number {
             display: flex;
-            color: #004F6E;
+            color: #004f6e;
             font-family: "Noto Sans";
             font-size: 64px;
             font-weight: bold;
@@ -116,7 +122,6 @@
             padding: 8px;
             margin-bottom: 24px;
         }
-
     }
 }
 
@@ -124,7 +129,7 @@
     width: auto;
     display: inline-flex;
     align-items: center;
-    background-color: rgba(151,231,179, 0.3);
+    background-color: rgba(151, 231, 179, 0.3);
     padding: 6px;
     border-radius: 4px;
 }
@@ -166,7 +171,7 @@
 }
 
 .change-percent-text-decrease {
-    color: #EC2027;
+    color: #ec2027;
     opacity: 1;
     font-size: 14px;
     line-height: 19px;
