--- a/app/components/Efficiency/styles.scss
+++ b/app/components/Efficiency/styles.scss
@@ -21,6 +21,7 @@
         width: fit-content;
     }
     .tile-card {
+        height:340px;
         background: #ffffff;
         /* card shadow */
         box-shadow: 4px 12px 32px rgba(109, 141, 173, 0.12) !important ;
@@ -33,6 +34,7 @@
         font-weight: normal;
         font-size: 18px;
         line-height: 25px;
+        margin-bottom: 16px;
     }
     .apply-cancel-buttons{
         > button {
@@ -55,7 +57,7 @@
     }
 
     .efficiency-container {
-        padding: 0px 40px;
+        padding: 10px 40px;
         .efficiency-dashboard-header {
             margin: 0px;
             margin-top: 36px;
@@ -86,6 +88,7 @@
         justify-content: space-between;
         flex-flow: row wrap;
         padding: 14px;
+        align-items: center;
         &:nth-child(2n) {
             background-color: #eefaff;
         }
