--- a/app/components/SharedComponents/style.scss
+++ b/app/components/SharedComponents/style.scss
@@ -104,6 +104,10 @@
     .selected{
       border-bottom: 2px solid #008489;
     }
+    .disabled{
+      pointer-events: none;
+      cursor: default;
+    }
   }
   .preset-tag {
     background-color: #f2f2f2;
