Update default dates, general styling and add loading

--- a/app/components/Efficiency/styles.scss
+++ b/app/components/Efficiency/styles.scss
@@ -19,6 +19,7 @@
     font-family: "Noto Sans";
     .efficiencyOnboard-link {
         width: fit-content;
+        position: absolute;
     }
     .tile-card {
         height:340px;
