--- a/app/components/Efficiency/styles.scss
+++ b/app/components/Efficiency/styles.scss
@@ -155,6 +155,14 @@
             margin-bottom: 24px;
         }
     }
+    .donut-chart {
+        &.no-data{
+            .recharts-legend-item .recharts-surface{
+                display: none !important;
+            }
+        }
+    }
+
 }
 
 .change-percent-badge-increase {
