--- a/app/components/Efficiency/styles.scss
+++ b/app/components/Efficiency/styles.scss
@@ -135,13 +135,21 @@
             line-height: 87px;
             flex: 1 0 60%;
             margin-bottom: 24px;
-            sub {
+            sup,sub{
                 display: flex;
                 font-size: 18px;
                 align-items: flex-end;
                 font-weight: normal;
                 line-height: 25px;
-                bottom: 10px;
+                margin-left: 8px;
+            }
+            sup {
+                top: 16px;
+                margin-bottom: 28px;
+                min-height: 32px;
+            }
+            sub {
+                bottom: 12px;
             }
         }
         .overtime-helper {
@@ -194,6 +202,12 @@
         span {
             font-weight: bold;
             color: #009483;
+        }
+    }
+    .change-value{
+        svg {
+            width: 24px !important;
+            height: 24px !important;
         }
     }
     ::-webkit-scrollbar {
