--- a/app/components/Efficiency/informationModal.scss
+++ b/app/components/Efficiency/informationModal.scss
@@ -1,15 +1,13 @@
 
     .efficiency-content {
+        padding: 0 !important;
+        overflow-x: hidden;
         .title {
-            padding: 32px 0px;
-            font-size: 26px;
-            line-height: 35px;
+            padding: 32px 32px 24px 32px;
             color: #004F6E;
-            font-family: Noto Sans;
-            font-style: normal;
-            font-weight: normal;
         }
         .column {
+            padding: 0 32px;
             margin-bottom: 40px;
         }
         .close {
@@ -18,15 +16,15 @@
                 background-color: transparent;
             }
         }
-        .paragraph {
-            line-height: 22px;
-        }
         .subtitle {
             margin-top: 16px;
             margin-bottom: 4px;
-            font-size: 16px;
         }
         .segment div {
             line-height: 22px;
+        }
+        .panel {
+            margin-bottom: 40px;
+            padding: 0 32px;
         }
     }
