--- a/app/components/Efficiency/styles.scss
+++ b/app/components/Efficiency/styles.scss
@@ -15,8 +15,14 @@
     background-color: #f2f2f2;
     height: 100%;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: auto;
     font-family: "Noto Sans";
+
+    .tile-container,
+    .header-element {
+        max-width: 1520px;
+        min-width: 1500px;
+    }
     .efficiencyOnboard-link {
         width: fit-content;
         position: absolute;
@@ -48,10 +54,7 @@
         }
     }
     .efficiency-head-container {
-        display: flex;
-        justify-content: center;
-        align-content: center;
-        align-items: center;
+        width: fit-content;
         height: auto;
         background-color: #e0e0e0;
         padding: 0 40px;
@@ -135,7 +138,8 @@
             line-height: 87px;
             flex: 1 0 60%;
             margin-bottom: 24px;
-            sup,sub{
+            sup,
+            sub {
                 display: flex;
                 font-size: 18px;
                 align-items: flex-end;
@@ -191,7 +195,7 @@
         border-radius: 4px;
         span {
             font-weight: bold;
-            color: #FF4D4D;
+            color: #ff4d4d;
         }
     }
     .green-label {
@@ -204,7 +208,7 @@
             color: #009483;
         }
     }
-    .change-value{
+    .change-value {
         svg {
             width: 24px !important;
             height: 24px !important;
@@ -230,8 +234,8 @@
     ::-webkit-scrollbar-thumb:hover {
         background: rgba(85, 85, 85, 0.8);
     }
-    .faded{
-        opacity: .8;
+    .faded {
+        opacity: 0.8;
         color: #4f4f4f;
     }
 }
