--- a/app/components/Efficiency/styles.scss
+++ b/app/components/Efficiency/styles.scss
@@ -128,28 +128,28 @@
         display: flex;
         justify-content: space-between;
         flex-flow: row wrap;
-        align-items: center;
+        align-items: center; 
+        margin-bottom: 35px;
         .overtime-block-number {
             display: flex;
             color: #004f6e;
             font-family: "Noto Sans";
-            font-size: 64px;
+            font-size: 48px;
             font-weight: bold;
-            line-height: 87px;
-            flex: 1 0 60%;
-            margin-bottom: 24px;
+            line-height: 66px;
+            margin-bottom: 35px;
             sup,
             sub {
                 display: flex;
-                font-size: 18px;
+                font-size: 16px;
                 align-items: flex-end;
                 font-weight: normal;
-                line-height: 25px;
-                margin-left: 8px;
+                line-height: 22px;
+                margin: 0 4px;
             }
             sup {
-                top: 16px;
-                margin-bottom: 28px;
+                top: 0;
+                margin-bottom: 8px;
                 min-height: 32px;
             }
             sub {
