--- a/app/components/Efficiency/styles.scss
+++ b/app/components/Efficiency/styles.scss
@@ -228,7 +228,7 @@
         background: rgba(85, 85, 85, 0.8);
     }
     .faded {
-        opacity: 0.8;
+        background: #F2F2F2;
         color: #4f4f4f;
     }
 }
