--- a/app/components/Efficiency/styles.scss
+++ b/app/components/Efficiency/styles.scss
@@ -20,8 +20,7 @@
 
     .tile-container,
     .header-element {
-        max-width: 1520px;
-        min-width: 1500px;
+        width: 1520px;
     }
     .efficiencyOnboard-link {
         width: fit-content;
