--- a/app/components/Efficiency/informationModal.scss
+++ b/app/components/Efficiency/informationModal.scss
@@ -2,6 +2,7 @@
     .efficiency-content {
         padding: 0 !important;
         overflow-x: hidden;
+        min-height: 480px;
         .title {
             padding: 32px 32px 24px 32px;
             color: #004F6E;
