--- a/app/components/Efficiency/styles.scss
+++ b/app/components/Efficiency/styles.scss
@@ -26,6 +26,11 @@
         width: fit-content;
         position: absolute;
     }
+    .demo-video-link {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
     .tile-card {
         height: 340px;
         background: #ffffff;
@@ -127,7 +132,7 @@
         display: flex;
         justify-content: space-between;
         flex-flow: row wrap;
-        align-items: center; 
+        align-items: center;
         margin-bottom: 50px;
         .overtime-block-number {
             display: flex;
@@ -136,7 +141,7 @@
             font-size: 48px;
             font-weight: bold;
             line-height: 66px;
-            
+
             sub {
                 display: flex;
                 font-size: 16px;
